--- a/.github/workflows/main_voyager-epsilon(staging).yml
+++ b/.github/workflows/main_voyager-epsilon(staging).yml
@@ -7,7 +7,7 @@ name: Build and deploy Python app to Azure Web App - voyager-epsilon
 on:
   push:
     branches:
-      - main
+      - staging
   workflow_dispatch:
 
 jobs:
